--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,21 @@
-extends layout
+html
+  head
+    link(rel='stylesheet', href='/stylesheets/index.css')
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
+    block content
+      div.background
+       div.containerHome
+        img(src="/images/timderlogo.png", alt="")
 
-block content
-  h1= title
-  p Welcome to #{title}
+
+        div.form-group
+         label(for="companyName") Your company:
+         input.form-control(type="text", name="companyName", id="companyName", placeholder="Thomas More")
+         a.btn.btn-primary(id="startSwiping", href="/swiping") Start swiping!
+
+         p Are you a student?
+         a.btn.btn-default(id="login",href="/login") Log in here!
+
+      script(src="/socket.io/socket.io.js")
+      script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
+      script(src="/javascripts/index.js")
