changed register file

--- a/views/register.jade
+++ b/views/register.jade
@@ -1,15 +1,21 @@
 extends layout
 
 block content
- h1 Schrijf je in op tIMDer!
- div
-  form(class='form-signin', action='/signup', method='POST')
-   input(type='text', name='username', placeholder='Gebruikersnaam',required, autofocus)
-   input(type='password', name='password', placeholder='Wachtwoord', required)
-   input(type='email', name='email', placeholder='E-mail',required)
-   input(type='text', name='firstName', placeholder='Voornaam',required)
-   input(type='text', name='lastName', placeholder='Achternaam',required)
-   button(type='submit') Inschrijven
- #message
-  if message
-   h1 #{message}
+  a(href="/") Back to home
+
+  h1 Sign up
+
+  form(action="/login", method="post")
+    label(for="firstName") First name
+    input.form-control(type="text", name="firstName", id="firstName", autofocus)
+    label(for="lastName") Last name
+    input.form-control(type="text", name="lastName", id="lastName", autofocus)
+    label(for="email") Email
+    input.form-control(type="text", name="email", id="email", autofocus)
+    label(for="password") Password
+    input.form-control(type="password", name="password", id="password", autofocus)
+    button.btn.btn-primary(type="submit") Sign up
+
+    p Already have an account?
+    a.btn.btn-default(href="/login") Log in here
+
