--- a/views/login.jade
+++ b/views/login.jade
@@ -2,17 +2,12 @@ extends layout
 
 block content
  div#container
-  h1 Schrijf je in op tIMDer!
+  h1 Log in
   div.form-group
-   form(class='form-signin', action='/login', method='POST')
-    input.form-control(type='text', name='username' placeholder='Gebruikersnaam',required, autofocus)
-    input.form-control(type='password', name='password' placeholder='Wachtwoord', required)
+   form(action='/login', method='POST')
+    input.form-control(type='text', name='username' placeholder='Gebruikersnaam', autofocus)
+    input.form-control(type='password', name='password' placeholder='Wachtwoord')
     button.btn.btn-primary(type='submit') Log in
-  a(href='/signup') Maak een account
-   #message
-   if message
-    h1 #{message}
 
-  script(src="/socket.io/socket.io.js")
-  script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
-  script(src="/javascripts/index.js")
+  p Need an acount?
+  a.btn.btn-default(href='/signup') Sign up here
