--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,6 @@
-html
+zhtml
   head
     link(rel='stylesheet', href='/stylesheets/index.css')
-    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
-    block content
       div.background
        div.containerHome
         img(src="/images/timderlogo.png", alt="")
@@ -16,6 +14,4 @@ html
          p Are you a student?
          a.btn.btn-default(id="login",href="/login") Log in here!
 
-      script(src="/socket.io/socket.io.js")
-      script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
       script(src="/javascripts/index.js")
