--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ html
 
 
         div.form-group
-         label(for="companyName") Your company name
+         label(for="companyName") Your company:
          input.form-control(type="text", name="companyName", id="companyName", placeholder="Thomas More")
          a.btn.btn-primary(id="startSwiping", href="/swiping") Start swiping!
 
