--- a/views/signup.jade
+++ b/views/signup.jade
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+  link(rel='stylesheet', href='/stylesheets/style.css')	
   div.container
     a(href="/") Back to home
 
