added show the love model,view and js

--- a/views/showTheLove.jade
+++ b/views/showTheLove.jade
@@ -2,7 +2,10 @@ extends layout
 
 block content
  div.container
-  h1.text-center This is where we show the love
+  h1.text-center Here is where we show the love
   div#dateContainer 
    ul.list-group#dateList
+  button#createDate Pls maak aan! 
+ script(src="/socket.io/socket.io.js")
+ script(src="/javascripts/showTheLove.js")   
      
