updated views index, layout, letsdate, login, signup

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,11 +1,9 @@
 doctype html
 html
   head
-    title= title
+    title Timder
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
-    link(rel='stylesheet', href='/stylesheets/style.css')
     
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
-    script(src="/socket.io/socket.io.js")
   body
     block content
