--- a/views/index.jade
+++ b/views/index.jade
@@ -1,17 +1,18 @@
-html
-  head
-    link(rel='stylesheet', href='/stylesheets/index.css')
-      div.background
-       div.containerHome
-        img(src="/images/timderlogo.png", alt="")
+extends layout
 
+block content
+  div.container
+    h1.text-center TIMDER
 
-        div.form-group
-         label(for="companyName") Your company name
-         input.form-control(type="text", name="companyName", id="companyName", placeholder="Thomas More")
-         a.btn.btn-primary(id="startSwiping", href="/swiping") Start swiping!
+    form(action="/", method="post")
+      label(for="companyName") Your company name
+      input.form-control(type="text", name="companyName", id="companyName", placeholder="Thomas More", autofocus)
+      div.alert(style="display: none;")
+      input.btn.btn-primary(type="submit", id="startSwiping", value="Start swiping!")
 
-         p Are you a student?
-         a.btn.btn-default(id="login",href="/login") Log in here!
+    p Are you a student?
+    a.btn.btn-default(href="/login") Log in
+    a.btn.btn-default(href="/signup") Sign up
 
-      script(src="/javascripts/index.js")
+  script(src="/socket.io/socket.io.js")
+  script(src="/javascripts/index.js")
