--- a/views/login.jade
+++ b/views/login.jade
@@ -1,9 +1,12 @@
 extends layout
 
 block content
-  div#container
-    h1 Log in
-    form(action='/login', method='POST')
+  div.container
+    a(href="/") Back to home
+
+    h1.text-center Log in
+
+    form(action="", method="post")
       label(for="email") Email
       input.form-control(type='text', name='email', id="email", autofocus)
       label(for="password")
