--- a/views/signup.jade
+++ b/views/signup.jade
@@ -4,11 +4,11 @@ block content
   div.container
     a(href="/") Back to home
 
-    h1 Sign up
+    h1.text-center Sign up
 
-    form(action="/login", method="post")
+    form(action="", method="post")
       label(for="firstName") First name
-      input.form-control(type="text", name="firstName", id="firstName")
+      input.form-control(type="text", name="firstName", id="firstName", autofocus)
       label(for="lastName") Last name
       input.form-control(type="text", name="lastName", id="lastName")
       label(for="email") Email
@@ -17,6 +17,6 @@ block content
       input.form-control(type="password", name="password", id="password")
       button.btn.btn-primary(type="submit") Sign up
 
-      p Already have an account?
-      a.btn.btn-default(href="/login") Log in here
+    p Already have an account?
+    a.btn.btn-default(href="/login") Log in here
 
