added delete function student

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -12,7 +12,7 @@ block content
    button.list-group-item(id="addAdmin") Add Admin 
   button.btn.primary-button(id="btnStudent") Add Student! 
 
-  div(id="showStudents", style="display:none;")
+  div(id="showStudents" style="display:block;")
    ul.list-group#listStudents
   div(id="showVotes",style="display:none;")  
    h1.text-center Votes was clicked
