--- a/views/letsdate.jade
+++ b/views/letsdate.jade
@@ -4,7 +4,7 @@ block content
   div.container
     h1.text-center Welcome #{companyName}
 
-    span Swipe left to like, right to skip!
+    //- span Swipe left to like, right to skip!
 
     div.jumbotron
       div.profile
@@ -20,6 +20,8 @@ block content
             img#skill2(src="/images/dev/js5logo.png")
           li
             img#skill3(src="/images/dev/js5logo.png")
+
+
   
   script(src="/socket.io/socket.io.js")
   script(src="/javascripts/letsdate.js")
