--- a/views/index.jade
+++ b/views/index.jade
@@ -8,11 +8,13 @@ block content
       label(for="companyName") Your company name
       input.form-control(type="text", name="companyName", id="companyName", placeholder="Thomas More", autofocus)
       div.alert(style="display: none;")
-      input.btn.btn-primary(type="submit", id="startSwiping", value="Start swiping!")
+      input.btn.btn-primary#startSwiping(type="submit", value="Start swiping!")
 
     p Are you a student?
     a.btn.btn-default(href="/login") Log in
     a.btn.btn-default(href="/signup") Sign up
+
+    input#addStudent(type="submit", value="Add student")
 
   script(src="/socket.io/socket.io.js")
   script(src="/javascripts/index.js")
