--- a/views/signup.jade
+++ b/views/signup.jade
@@ -6,7 +6,7 @@ block content
 
     h1.text-center Sign up
 
-    form(action="", method="post")
+    form(action="/signup", method="post")
       label(for="firstName") First name
       input.form-control(type="text", name="firstName", id="firstName", autofocus)
       label(for="lastName") Last name
