--- a/views/login.jade
+++ b/views/login.jade
@@ -6,7 +6,7 @@ block content
 
     h1.text-center Log in
 
-    form(action="", method="post")
+    form(action="/login", method="post")
       label(for="email") Email
       input.form-control(type='text', name='email', id="email", autofocus)
       label(for="password")
