added sockets to login/signup

--- a/views/login.jade
+++ b/views/login.jade
@@ -15,3 +15,5 @@ block content
 
     p Need an acount?
     a.btn.btn-default(href='/signup') Sign up here
+
+  script(src="/socket.io/socket.io.js")
