--- a/views/signup.jade
+++ b/views/signup.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   div.container
-    a(href="/") Back to home
+    a(href="/") Back to home 
 
     h1.text-center Sign up
 
@@ -19,4 +19,6 @@ block content
 
     p Already have an account?
     a.btn.btn-default(href="/login") Log in here
+
+  script(src="/socket.io/socket.io.js")
 
