--- a/views/index.jade
+++ b/views/index.jade
@@ -1,20 +1,21 @@
 extends layout
 
-block content
-  div.container
-    h1.text-center TIMDER
+head
+  link(rel="stylesheet", href="/stylesheets/index.css")
+body
+  block content
+    div.container
+      h1.text-center TIMDER
 
-    form(action="/", method="post")
-      label(for="companyName") Your company name
-      input.form-control(type="text", name="companyName", id="companyName", placeholder="Thomas More", autofocus)
-      div.alert(style="display: none;")
-      input.btn.btn-primary#startSwiping(type="submit", value="Start swiping!")
+      form(action="/", method="post")
+        label(for="companyName") Your company name
+        input.form-control(type="text", name="companyName", id="companyName", placeholder="Thomas More", autofocus)
+        div.alert(style="display: none;")
+        input.btn.btn-primary#startSwiping(type="submit", value="Start swiping!")
 
-    p Are you a student?
-    a.btn.btn-default(href="/login") Log in
-    a.btn.btn-default(href="/signup") Sign up
+      p Are you a student?
+      a.btn.btn-default(href="/login") Log in
+      a.btn.btn-default(href="/signup") Sign up
 
-    input#addStudent(type="submit", value="Add student")
-
-  script(src="/socket.io/socket.io.js")
-  script(src="/javascripts/index.js")
+    script(src="/socket.io/socket.io.js")
+    script(src="/javascripts/index.js")
