--- a/views/login.jade
+++ b/views/login.jade
@@ -9,7 +9,7 @@ block content
     form(action="/login", method="post")
       label(for="email") Email
       input.form-control(type='text', name='email', id="email", autofocus)
-      label(for="password")
+      label(for="password") Password
       input.form-control(type='password', name='password', id="password")
       button.btn.btn-primary(type='submit') Log in
 
