--- a/views/admin.jade
+++ b/views/admin.jade
@@ -7,8 +7,8 @@ block content
     h1.text-center Log in
 
     form(action="/admin", method="post")
-      label(for="email") Email
-      input.form-control(type='text', name='email', id="email", autofocus)
+      label(for="username") Username
+      input.form-control(type='text', name="username", id="username", autofocus)
       label(for="password") Password
       input.form-control(type='password', name='password', id="password")
       button.btn.btn-primary(type='submit') Log in
