--- a/views/addwork.jade
+++ b/views/addwork.jade
@@ -4,23 +4,30 @@ block content
   div.container
     h1.text-center Welcome #{user.firstName}
     h2.text-center Update your data!
-    form(role="form")
+
+    form#uploadForm(enctype="multipart/form-data", action="/addwork", method="post")
+      input(type="file", name="work1")
+      input(type="file", name="work2")
+      input(type="file", name="work3")
+      input.btn.btn-primary#submitWork(type="submit", value="Update!")
+
+    form
       div.form-group
         label(for="email") Email
         input.form-control#email(type="email", placeholder="Email")
       div.form-group
+        label(for="password") Password
+        input.form-control#password(type="password", placeholder="Password")
+      div.form-group
         label(for="firstName") Firstname
         input.form-control#firstName(type="text", placeholder="Firstname")
       div.form-group
-        label(for="laststName") Lastname
-        input.form-control#laststName(type="text", placeholder="Lastname")
+        label(for="lastName") Lastname
+        input.form-control#lastName(type="text", placeholder="Lastname")
+      div.form-group
+        input#userId(type="text", value="#{user._id}", style="display: none;")
+      input.btn.btn-primary#submitInfo(value="Update user information")
 
-    form#uploadForm(enctype="multipart/form-data", action = "/index", method="post")
-      input(type="file", name="userPhoto")
-      input(type="file", name="userPhoto")
-      input(type="file", name="userPhoto")
-      input.btn.btn-primary(type="submit", value="Update!", name="submit")
-  
     a.text-center(href="/logout") log out
 
   script(src="/socket.io/socket.io.js")
