--- a/views/login.jade
+++ b/views/login.jade
@@ -11,6 +11,8 @@ block content
       input.form-control(type='text', name='email', id="email", autofocus)
       label(for="password") Password
       input.form-control(type='password', name='password', id="password")
+      if message
+        div(style="color: red") #{message}
       button.btn.btn-primary(type='submit') Log in
 
     p Need an acount?
