--- a/views/admin.jade
+++ b/views/admin.jade
@@ -1,16 +1,24 @@
-extends layout
+html
+  head
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
+    link(rel="stylesheet", href="/stylesheets/log.css")
+  body
+    block content
+      div.container
+        div#logo
+          a(href="/")
+            img(src="/images/timderlogo.png")
 
-block content
-  div.container
-    a(href="/") Back to home
 
-    h1.text-center Log in
+        div.login
+          h1 Log in as admin
 
-    form(action="/admin", method="post")
-      label(for="username") Username
-      input.form-control(type='text', name="username", id="username", autofocus)
-      label(for="password") Password
-      input.form-control(type='password', name='password', id="password")
-      button.btn.btn-primary(type='submit') Log in
+          form(action="/admin", method="post")
+            label(for="username") Username
+            input.form-control(type='text', name="username", id="username", autofocus)
+            label(for="password") Password
+            input.form-control(type='password', name='password', id="password")
+            button.btn.btn-primary#login(type='submit') Log in
 
-  script(src="/socket.io/socket.io.js")
+      script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
+      script(src="/socket.io/socket.io.js")
