--- a/views/showthelove.jade
+++ b/views/showthelove.jade
@@ -1,10 +1,13 @@
-extends layout
+html
+  head
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
+  body
+    block content
+      div.container
+        h1.text-center Here is where we show the love
+        div#dateContainer 
+          ul.list-group#dateList
 
-block content
-  div.container
-    h1.text-center Here is where we show the love
-    div#dateContainer 
-      ul.list-group#dateList
-
-  script(src="/socket.io/socket.io.js")
-  script(src="/javascripts/showTheLove.js")
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
+    script(src="/socket.io/socket.io.js")
+    script(src="/javascripts/showTheLove.js")
