added jquery link

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -34,6 +34,7 @@ html
               label(for="password") Password
               input.form-control(id="password", name="password", type="password")
               button.btn.btn-default(id="btnAdmin", type="submit") Make admin!
-         
+      
+      script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")   
       script(src="/socket.io/socket.io.js")
       script(src="/javascripts/dashboard.js")
